--- a/parcial1/pares.html
+++ b/parcial1/pares.html
@@ -11,63 +11,65 @@
 <body>
     <div class="container">
         <h1>Juego pares</h1>
+        <h2>Número de pares: <span id="total_pares">0</span></h2>
         <div class="row">
             <div class="col-3">
-                <img src="fotos-pares/tapar.jpg" class="img-fluid" data-id="par1.jpg">
+                <img src="fotos-pares/tapar.jpg" class="img-fluid" data-id="par1.jpg" data-estado="0">
             </div>
             <div class="col-3">
-                <img src="fotos-pares/tapar.jpg" class="img-fluid" data-id="par2.jpg">
+                <img src="fotos-pares/tapar.jpg" class="img-fluid" data-id="par2.jpg" data-estado="0">
             </div>
             <div class="col-3">
-                <img src="fotos-pares/tapar.jpg" class="img-fluid" data-id="par1.jpg">
+                <img src="fotos-pares/tapar.jpg" class="img-fluid" data-id="par1.jpg" data-estado="0">
             </div>
             <div class="col-3">
-                <img src="fotos-pares/tapar.jpg" class="img-fluid" data-id="par2.jpg">
+                <img src="fotos-pares/tapar.jpg" class="img-fluid" data-id="par2.jpg" data-estado="0">
             </div>
         </div><br>
         <div class="row">
             <div class="col-3">
-                <img src="fotos-pares/tapar.jpg" class="img-fluid" data-id="par3.jpg">
+                <img src="fotos-pares/tapar.jpg" class="img-fluid" data-id="par3.jpg" data-estado="0">
             </div>
             <div class="col-3">
-                <img src="fotos-pares/tapar.jpg" class="img-fluid" data-id="par4.jpg">
+                <img src="fotos-pares/tapar.jpg" class="img-fluid" data-id="par4.jpg" data-estado="0">
             </div>
             <div class="col-3">
-                <img src="fotos-pares/tapar.jpg" class="img-fluid" data-id="par3.jpg">
+                <img src="fotos-pares/tapar.jpg" class="img-fluid" data-id="par3.jpg" data-estado="0">
             </div>
             <div class="col-3">
-                <img src="fotos-pares/tapar.jpg" class="img-fluid" data-id="par4.jpg">
-            </div>
-        </div><br>
-        <div class="row">
-            <div class="col-3">
-                <img src="fotos-pares/tapar.jpg" class="img-fluid" data-id="par5.jpg">
-            </div>
-            <div class="col-3">
-                <img src="fotos-pares/tapar.jpg" class="img-fluid" data-id="par6.jpg">
-            </div>
-            <div class="col-3">
-                <img src="fotos-pares/tapar.jpg" class="img-fluid" data-id="par5.jpg">
-            </div>
-            <div class="col-3">
-                <img src="fotos-pares/tapar.jpg" class="img-fluid" data-id="par6.jpg">
+                <img src="fotos-pares/tapar.jpg" class="img-fluid" data-id="par4.jpg" data-estado="0">
             </div>
         </div><br>
         <div class="row">
             <div class="col-3">
-                <img src="fotos-pares/tapar.jpg" class="img-fluid" data-id="par7.jpg">
+                <img src="fotos-pares/tapar.jpg" class="img-fluid" data-id="par5.jpg" data-estado="0">
             </div>
             <div class="col-3">
-                <img src="fotos-pares/tapar.jpg" class="img-fluid" data-id="par8.jpg">
+                <img src="fotos-pares/tapar.jpg" class="img-fluid" data-id="par6.jpg" data-estado="0">
             </div>
             <div class="col-3">
-                <img src="fotos-pares/tapar.jpg" class="img-fluid" data-id="par7.jpg">
+                <img src="fotos-pares/tapar.jpg" class="img-fluid" data-id="par5.jpg" data-estado="0">
             </div>
             <div class="col-3">
-                <img src="fotos-pares/tapar.jpg" class="img-fluid" data-id="par8.jpg">
+                <img src="fotos-pares/tapar.jpg" class="img-fluid" data-id="par6.jpg" data-estado="0">
+            </div>
+        </div><br>
+        <div class="row">
+            <div class="col-3">
+                <img src="fotos-pares/tapar.jpg" class="img-fluid" data-id="par7.jpg" data-estado="0">
+            </div>
+            <div class="col-3">
+                <img src="fotos-pares/tapar.jpg" class="img-fluid" data-id="par8.jpg" data-estado="0">
+            </div>
+            <div class="col-3">
+                <img src="fotos-pares/tapar.jpg" class="img-fluid" data-id="par7.jpg" data-estado="0">
+            </div>
+            <div class="col-3">
+                <img src="fotos-pares/tapar.jpg" class="img-fluid" data-id="par8.jpg" data-estado="0">
             </div>
         </div>
     </div>
     <script src="js/bootstrap.js"></script>
+    <h6>Félix Aguilasocho Nicolás 5AVP &copy;</h6>
 </body>
 </html>
