--- a/parcial1/juegoproyecto.html
+++ b/parcial1/juegoproyecto.html
@@ -4,25 +4,46 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="css/bootstrap.css">
     <script src="JuegoJS.js"></script>
+    <script src="code.jquery.com_jquery-3.7.1.js"></script>
 </head>
 <body>
-  <title>Juego de la serpiente</title>
+  <title>Ahorcado</title>
   <style>
     body {
       font-family: Arial, sans-serif;
       text-align: center;
+      width: 100%;
+      background-color: rgba(200, 222, 230, 0.514);
     }
-    canvas {
-      border: 1px solid black;
-      margin: 0 auto;
-      display: block;
+    article{
+      width: 30%;
+      height: 200px;
+      float: left;
+    }
+    aside{
+      width: 70%;
+      height: 200px;
+      float: left;
     }
   </style>
 </head>
 <body>
-  <h1>Snake Game</h1>
-  <canvas id="gameCanvas" width="400" height="400"></canvas>
+  <h1>Juego del ahorcado</h1><hr><br>
+  <article>
+  <img src="imagenes/ahorcado.png" alt="">
+  </article>
+<aside>
+  <h1></h1>
+</aside>
+
+  <input id="letra" type="text" placeholder="Dame una letra" maxlength="1"> 
+  <button id="boton">Comprobar</button>
+  <div id="resultado"></div>
+  <h2>Número de intentos:</h2>
+  <div id="intentos"></div>
+  <button id="boton1">Iniciar Juego</button>
 </body>
 </html>
 
